[gd_scene load_steps=7 format=3 uid="uid://bf7a0a6fbohbw"]

[ext_resource type="Texture2D" uid="uid://ckjcq1uog4sk5" path="res://icon.svg" id="1_0q6q2"]
[ext_resource type="Script" path="res://telephone/script/telephone.gd" id="1_bv30h"]
[ext_resource type="Theme" uid="uid://cjnweyhuaw0k" path="res://themes/prompt_theme.tres" id="2_1lqqx"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="3_k3lcd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn5eu"]
size = Vector2(130, 127)

[sub_resource type="CircleShape2D" id="CircleShape2D_myyij"]
radius = 121.803

[node name="Telephone" type="Node2D"]
script = ExtResource("1_bv30h")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -88.0
offset_top = -136.0
offset_right = 109.0
offset_bottom = -87.0
theme = ExtResource("2_1lqqx")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Pick up the phone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("1_0q6q2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_bn5eu")

[node name="Interactable" parent="StaticBody2D" instance=ExtResource("3_k3lcd")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Interactable"]
shape = SubResource("CircleShape2D_myyij")

[connection signal="interacted" from="StaticBody2D/Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="StaticBody2D/Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="StaticBody2D/Interactable" to="." method="_on_interactable_player_exit"]
